# Agency-OS

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CUTOVER.md  DOMAINS.md  ENGINEERING_AGENT_IMPLEMENTATION_GUIDE.md  GEMINI.md  ONBOARDING.md  PROD_READY_GUIDE.md  PROJECT.md  README.md  agency_os_core_platform_enhancements.patch  ci.yml  ci_log.txt  ci_log_2.txt  ci_log_4.txt  ci_log_5.txt  conformance_audit_report.md  copilot-instructions.md  credentials.example.env  deploy.sh  deploy_web.sh  execute_single_click_seo_titles.py  gtm_integration.patch  load_credentials.sh  pull_request_template.md  run-issue.sh  setup.sh
control-plane/: .dockerignore  DEPLOY.md  Dockerfile  README.md  agencyos.db  migrate.py  pyproject.toml  requirements.txt
control-plane/app/: auth.py  database.py  main.py  metrics.py  middleware.py  models.py  observability.py  security.py  tasks.py  whatsapp.py
control-plane/migrations/: env.py
control-plane/scratch/: onboard_tenant_flow.py  raw_audit.json  run_governed_onboarding_e2e.py  verify_security_fix.py  verify_slice1.py
control-plane/scripts/: create_alert_policies.sh  provision_scheduler.sh  setup_worker_role.sql
control-plane/tests/: adv_sibling_bypass_test.py  conftest.py  test_actions_endpoint.py  test_adversarial_build_traversal.py  test_adversarial_challenger.py  test_adversarial_rce.py  test_adversarial_tfplan_traversal.py  test_adversarial_traversal.py  test_api_rls_postgres.py  test_autonomy_confidence.py  test_brand_graph_populate.py  test_brand_graph_schema.py  test_brand_score.py  test_build_adapter.py  test_build_agent.py  (+90 more)
(+237 files in other folders)
